# nebulagraph-lite

./: .dockerignore  .gitignore  .pdm-python  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: pr.yaml  release.yaml
design/: how_it_works_via_shell.sh
examples/: NebulaGraph_Lite.ipynb
src/nebulagraph_lite/: __init__.py  cli.py  nebulagraph.py  utils.py
tests/e2e/jupyter/: jupyter_test.ipynb  modelscope_test.ipynb
tools/: host_artifacts_on_modelscope.md
