[project]
name = "nebulagraph-lite"
dynamic = ["version"]
description = "Plug and play NebulaGraph with pip install."
authors = [
    {name = "Wey Gu",email = "weyl.gu@gmail.com"},
]
dependencies = [
    "udocker>=1.3.12",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "Apache 2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "file"
path = "src/nebulagraph_lite/__init__.py"

[tool.pdm]
package-type = "application"

[tool.pdm.dev-dependencies]
jupyter = [
    "ipython-ngql>=0.7.5",
]
client = [
    "nebula3-python>=3.4.0",
]

[tool.pdm.scripts]
nebulagraph = {call = "nebulagraph_lite.cli:main"}
